Java idomatic code